objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>A_B_Test__c</fullName>
        <label>A/B Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Id__c</fullName>
        <label>Ad Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_SFDC2__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AnFed</fullName>
                </value>
                <value>
                    <fullName>Apartment Bank</fullName>
                </value>
                <value>
                    <fullName>Axos Bank</fullName>
                </value>
                <value>
                    <fullName>Axos FS</fullName>
                </value>
                <value>
                    <fullName>Bank of Internet</fullName>
                </value>
                <value>
                    <fullName>Bank X</fullName>
                </value>
                <value>
                    <fullName>BofI Advisor</fullName>
                </value>
                <value>
                    <fullName>BofI Federal Bank</fullName>
                </value>
                <value>
                    <fullName>Lending</fullName>
                </value>
                <value>
                    <fullName>Nationwide</fullName>
                </value>
                <value>
                    <fullName>Netbank</fullName>
                </value>
                <value>
                    <fullName>UFB Direct</fullName>
                </value>
                <value>
                    <fullName>Virtus Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Approved_SFDC2__c</fullName>
        <label>Campaign Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Code_SFDC2__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_ID_SFDC2__c</fullName>
        <formula>Type_Code_SFDC2__c + Category_Code_SFDC2__c + RND_SFDC2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Tagged_URL_SFDC2__c</fullName>
        <label>Campaign-Tagged URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Campaign_Trim_SFDC2__c</fullName>
        <formula>left(Tracker_Code__c,FIND(&quot;_&quot;,Tracker_Code__c)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Trim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Code_SFDC2__c</fullName>
        <formula>IF(ISPICKVAL(Category_SFDC2__c,&quot;Auto-Lending&quot;),&quot;AT&quot;,
 IF(ISPICKVAL(Category_SFDC2__c,&quot;Consumer Deposits&quot;), &quot;CD&quot;,
 IF(ISPICKVAL(Category_SFDC2__c,&quot;Business_Banking&quot;), &quot;BB&quot;,
 IF(ISPICKVAL(Category_SFDC2__c,&quot;Virtus&quot;),&quot;VT&quot;,
 IF(ISPICKVAL(Category_SFDC2__c,&quot;Advisor&quot;),&quot;AD&quot;,
 IF(ISPICKVAL(Category_SFDC2__c,&quot;All&quot;),&quot;AL&quot;,
 NULL
 ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_SFDC2__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Auto-Lending</fullName>
                </value>
                <value>
                    <fullName>Business_Banking</fullName>
                    <label>Business Banking</label>
                </value>
                <value>
                    <fullName>C&amp;I</fullName>
                </value>
                <value>
                    <fullName>Consumer Deposits</fullName>
                </value>
                <value>
                    <fullName>EB-5</fullName>
                </value>
                <value>
                    <fullName>IPL</fullName>
                </value>
                <value>
                    <fullName>IPL Lending</fullName>
                </value>
                <value>
                    <fullName>Rate Sheets</fullName>
                </value>
                <value>
                    <fullName>SFR Lending</fullName>
                </value>
                <value>
                    <fullName>Specialty Deposits</fullName>
                </value>
                <value>
                    <fullName>Virtus</fullName>
                </value>
                <value>
                    <fullName>WCPL</fullName>
                </value>
                <value>
                    <fullName>WHSE</fullName>
                </value>
                <value>
                    <fullName>WME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Rate__c</fullName>
        <formula>NumberOfContacts/NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Content_SFDC2__c</fullName>
        <label>Content</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1200x628</fullName>
                </value>
                <value>
                    <fullName>120x600</fullName>
                </value>
                <value>
                    <fullName>160x600</fullName>
                </value>
                <value>
                    <fullName>1 Minute Ad</fullName>
                </value>
                <value>
                    <fullName>200x200</fullName>
                </value>
                <value>
                    <fullName>230x50</fullName>
                </value>
                <value>
                    <fullName>250x250</fullName>
                </value>
                <value>
                    <fullName>300x250</fullName>
                </value>
                <value>
                    <fullName>300x600</fullName>
                </value>
                <value>
                    <fullName>30 Second Ad</fullName>
                </value>
                <value>
                    <fullName>320x50</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>600x315</fullName>
                </value>
                <value>
                    <fullName>728x90</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Text Ad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConversionRate__c</fullName>
        <formula>1 * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConversionRate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Custom_Campaign_URL_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When using a custom URL for the campaign tagged URL instead of a default Salesforce auto-created</description>
        <inlineHelpText>Used for overriding the automatic custom URL provided by Salesforce</inlineHelpText>
        <label>Custom Campaign URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination_URL_SFDC2__c</fullName>
        <label>Destination URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Five9LSP__F9PS_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Five9 List</label>
        <referenceTo>Five9LSP__Five9_List__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9_List_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to Tie this campaign to Five9 Lists</inlineHelpText>
        <label>Five9 List Name</label>
        <referenceTo>Five9LSP__Five9_List__c</referenceTo>
        <relationshipLabel>Campaigns (Five9 List Name)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallNow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets Five9 callNowMode to &apos;ANY&apos;</description>
        <inlineHelpText>All new campaign members are added to Five9 list with &apos;call now mode&apos; set to &apos;ANY&apos;</inlineHelpText>
        <label>Five9 Call Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Endpoint__c</fullName>
        <label>Five9 WS Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Password__c</fullName>
        <label>Five9 User Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ReportEmail__c</fullName>
        <label>Five9 Report Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Five9__Five9User__c</fullName>
        <label>Five9 User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9list__c</fullName>
        <description>Five9 dialing list name</description>
        <label>Five9list</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jitterbit_Dedupe_External_Id_SFDC2__c</fullName>
        <description>External ID for Jitterbit deduplication process</description>
        <externalId>true</externalId>
        <label>Jitterbit Dedupe External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Activity_Datetime__c</fullName>
        <description>Notes the datetime of the last activity on this object.</description>
        <label>Last Activity Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Won</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Campaign_Code_Long_SFDC2__c</fullName>
        <description>Contains full length of legacy campaign code</description>
        <label>Legacy Campaign Code Long</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Campaign_Code_SFDC2__c</fullName>
        <description>Used for legacy campaign codes</description>
        <label>Legacy Campaign Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchType__c</fullName>
        <description>PPC only - if applicable</description>
        <inlineHelpText>PPC only - if applicable</inlineHelpText>
        <label>MatchType</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broad</fullName>
                </value>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Phrase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medium_Code_SFDC2__c</fullName>
        <formula>IF(ISPICKVAL(Medium_SFDC2__c,&quot;Mail&quot;),&quot;ML&quot;,
 IF(ISPICKVAL(Medium_SFDC2__c,&quot;Search&quot;), &quot;SH&quot;,
 IF(ISPICKVAL(Medium_SFDC2__c,&quot;Display&quot;),&quot;DP&quot;,
 IF(ISPICKVAL(Medium_SFDC2__c,&quot;Rate Table&quot;),&quot;RT&quot;,
 IF(ISPICKVAL(Medium_SFDC2__c,&quot;Email&quot;),&quot;EM&quot;,
 IF(ISPICKVAL(Medium_SFDC2__c,&quot;Print&quot;),&quot;PT&quot;,
 IF(ISPICKVAL(Medium_SFDC2__c,&quot;Call&quot;),&quot;CL&quot;,
 NULL
 )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medium Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium_SFDC2__c</fullName>
        <label>Medium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>GDN</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Rate Table</fullName>
                </value>
                <value>
                    <fullName>Remarketing</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Inbound_Calls_Received__c</fullName>
        <description>Count of inbound calls that were received from this Campaign</description>
        <label>Number of Inbound Calls Received</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_SFDC2__c</fullName>
        <label>Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <description>For aiding in reporting to assist in evaluating Sharing Rules since criteria can be by Owner.Role or Profile. Visible only to System Administrators, not on layouts.</description>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>For aiding in reporting to assist in evaluating Sharing Rules since criteria can be by Owner.Role or Profile. Visible only to System Administrators, not on layouts.</description>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_SFDC2__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Placement_SFDC2__c</fullName>
        <label>Placement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SFDC2__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand_SFDC2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Basic Business Checking</fullName>
                </value>
                <value>
                    <fullName>Business Interest Checking</fullName>
                </value>
                <value>
                    <fullName>Business Money Market</fullName>
                </value>
                <value>
                    <fullName>Business Savings</fullName>
                </value>
                <value>
                    <fullName>EB-5</fullName>
                </value>
                <value>
                    <fullName>Essential Checking</fullName>
                </value>
                <value>
                    <fullName>Free Report</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>High-Interest Savings</fullName>
                </value>
                <value>
                    <fullName>Mobile Home Park</fullName>
                </value>
                <value>
                    <fullName>Netbank Checking</fullName>
                </value>
                <value>
                    <fullName>Rewards Checking</fullName>
                </value>
                <value>
                    <fullName>Select Money Market</fullName>
                </value>
                <value>
                    <fullName>Structured Settlement</fullName>
                </value>
                <value>
                    <fullName>UFB Savings</fullName>
                </value>
                <value>
                    <fullName>X Checking</fullName>
                </value>
                <value>
                    <fullName>X Savings</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Small Balance Commerical</fullName>
                </value>
                <value>
                    <fullName>Student Housing</fullName>
                </value>
                <value>
                    <fullName>Lottery</fullName>
                </value>
                <value>
                    <fullName>Platinum Checking</fullName>
                </value>
                <value>
                    <fullName>CashBack Checking</fullName>
                </value>
                <value>
                    <fullName>Golden Checking</fullName>
                </value>
                <value>
                    <fullName>High-Yield Savings</fullName>
                </value>
                <value>
                    <fullName>Money Market Savings</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>White Papers</fullName>
                </value>
                <value>
                    <fullName>CDs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publisher_Source_SFDC2__c</fullName>
        <label>Publisher Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bing</fullName>
                </value>
                <value>
                    <fullName>Building Profits</fullName>
                </value>
                <value>
                    <fullName>BuySellAds</fullName>
                </value>
                <value>
                    <fullName>DepositAccounts</fullName>
                </value>
                <value>
                    <fullName>EB-5 Investors</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>HRB Newsletter</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Nerdwallet</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>San Diego Business Journal</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Intelliresponse</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Go Banking Rates</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Acxiom</fullName>
                </value>
                <value>
                    <fullName>Bankrate</fullName>
                </value>
                <value>
                    <fullName>Union Tribune</fullName>
                </value>
                <value>
                    <fullName>SDBJ</fullName>
                </value>
                <value>
                    <fullName>AdRoll</fullName>
                </value>
                <value>
                    <fullName>Informa</fullName>
                </value>
                <value>
                    <fullName>Irvine Company</fullName>
                </value>
                <value>
                    <fullName>Mint</fullName>
                </value>
                <value>
                    <fullName>Savingsaccounts</fullName>
                </value>
                <value>
                    <fullName>Moneyrates</fullName>
                </value>
                <value>
                    <fullName>hrblock.com</fullName>
                </value>
                <value>
                    <fullName>Wallethub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RND_SFDC2__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>RND</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Re_Targeting_SFDC2__c</fullName>
        <label>Re-Targeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponseRate__c</fullName>
        <formula>1 / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ResponseRate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SF_Asset__c</fullName>
        <label>SF - Asset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Structured Settlement</fullName>
                </value>
                <value>
                    <fullName>Lottery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Documents_Back__c</fullName>
        <label>SF - Documents Back</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Documents_Out__c</fullName>
        <label>SF - Documents Out</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Documents_Terminated__c</fullName>
        <description>For customers who do not make it past Legal; they are terminated.</description>
        <label>SF - Documents Terminated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Legal__c</fullName>
        <description>How many customers go to Legal or go through Legal Process from this Campaign?</description>
        <label>SF - Legal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Total_Mail_Pieces_Sent__c</fullName>
        <description>Identifies the total number of mail pieces sent out for this Campaign</description>
        <label>SF - Total Mail Pieces Sent</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQL_ID__c</fullName>
        <externalId>true</externalId>
        <label>SQL ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Value_Funded__c</fullName>
        <description>Total amount of opportunities funded - value of opportunities (currency)</description>
        <label>Total Value Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Number of opportunities Funded.</description>
        <label>Total Number Funded</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracker_Code__c</fullName>
        <externalId>true</externalId>
        <label>Tracker Code</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type_Code_SFDC2__c</fullName>
        <formula>IF(ISPICKVAL(Type,&quot;Direct Mail&quot;),&quot;DM&quot;, 
IF(ISPICKVAL(Type,&quot;Search&quot;), &quot;SCH&quot;, 
IF(ISPICKVAL(Type,&quot;Display&quot;),&quot;DP&quot;, 
IF(ISPICKVAL(Type,&quot;Rate Table&quot;),&quot;RT&quot;, 
IF(ISPICKVAL(Type,&quot;Email&quot;),&quot;EM&quot;, 
IF(ISPICKVAL(Type,&quot;Print&quot;),&quot;PR&quot;, 
IF(ISPICKVAL(Type,&quot;Call&quot;),&quot;CAL&quot;,
IF(ISPICKVAL(Type,&quot;GDN&quot;),&quot;GDN&quot;,
IF(ISPICKVAL(Type,&quot;GSP&quot;),&quot;GSP&quot;,
IF(ISPICKVAL(Type,&quot;PPC&quot;),&quot;PPC&quot;,
IF(ISPICKVAL(Type,&quot;Remarketing&quot;),&quot;RM&quot;,
IF(ISPICKVAL(Type,&quot;Social Media&quot;),&quot;SM&quot;,
IF(ISPICKVAL(Type,&quot;Video&quot;),&quot;VID&quot;,
IF(ISPICKVAL(Type,&quot;Website&quot;),&quot;WS&quot;,
IF(ISPICKVAL(Type,&quot;Service&quot;),&quot;SV&quot;,
IF(ISPICKVAL(Type,&quot;Contact List&quot;),&quot;CL&quot;,
IF(ISPICKVAL(Type,&quot;Organic&quot;),&quot;ORG&quot;,
IF(ISPICKVAL(Type,&quot;RMI&quot;),&quot;RMI&quot;,
IF(ISPICKVAL(Type,&quot;Multiple&quot;),&quot;MTP&quot;,
NULL 
)))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_Date_and_Time__c</fullName>
        <label>Webinar Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Webinar_URL__c</fullName>
        <label>Webinar URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_SFDC2__c</fullName>
        <description>Automatic calculation of Year based on start date</description>
        <formula>Text(YEAR(StartDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatic calculation of Year based on start date</inlineHelpText>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Jan_Marino_Advisor_Intro</fullName>
        <columns>CAMPAIGN.ID</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.EXP_RESPONSE</columns>
        <columns>AMOUNT_ALL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>jmari</value>
        </filters>
        <label>Jan Marino - Advisor Intro</label>
        <sharedTo>
            <group>Financial_Advisors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
</CustomObject>